odoo/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
        - name: odoo
          image: odoo:${ODOO_VERSION}
          args: ["-c", "/var/lib/odoo/odoo.conf"]
          ports:
            - containerPort: 8069
              name: http
            - containerPort: 8072
              name: websocket
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: odoo-data
              mountPath: /var/lib/odoo
            # - name: odoo-sessions # ELIMINADO PARA USAR PERSISTENCIA
            #   mountPath: /var/lib/odoo/sessions
            - name: odoo-config
              mountPath: /etc/odoo-ro
            - name: extra-addons
              mountPath: /mnt/extra-addons
            - name: oca-addons
              mountPath: /mnt/oca-addons
          livenessProbe:
            tcpSocket:
              port: 8069
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8069
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: odoo-config
          configMap:
            name: odoo-config
        - name: odoo-data
          persistentVolumeClaim:
            claimName: odoo-data
        # - name: odoo-sessions # ELIMINADO
        #   emptyDir: {}
        - name: extra-addons
          persistentVolumeClaim:
            claimName: odoo-extra-addons
        - name: oca-addons
          persistentVolumeClaim:
            claimName: odoo-oca-addons
