odoo/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  namespace: odoo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: odoo-redirect-https@kubernetescrd
spec:
  rules:
    - host: ${ODOO_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8072
  tls:
    - hosts:
        - ${ODOO_DOMAIN}
      secretName: odoo-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: odoo
spec:
  redirectScheme:
    scheme: https
    permanent: true
